// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpansionPanel component should match snapshot - ExpansionPanel complete: ExpansionPanel with complete example 1`] = `
<div
  className="MuiPaper-root MuiExpansionPanel-root Mui-expanded MuiExpansionPanel-rounded MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    aria-disabled={false}
    aria-expanded={true}
    className="MuiButtonBase-root MuiExpansionPanelSummary-root Mui-expanded"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiExpansionPanelSummary-content Mui-expanded"
    >
      Summary
    </div>
  </div>
  <div
    className="MuiCollapse-container MuiCollapse-entered"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner"
      >
        <div
          role="region"
        >
          <div
            className="MuiExpansionPanelDetails-root"
          >
            Details
          </div>
          <div
            className="MuiExpansionPanelActions-root MuiExpansionPanelActions-spacing"
          >
            Actions
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpansionPanel component should match snapshot - ExpansionPanelActions children: ExpansionPanel with ExpansionPanelActions 1`] = `
<div
  className="MuiPaper-root MuiExpansionPanel-root MuiExpansionPanel-rounded MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiExpansionPanelActions-root MuiExpansionPanelActions-spacing"
  >
    content
  </div>
  <div
    className="MuiCollapse-container MuiCollapse-hidden"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner"
      >
        <div
          role="region"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpansionPanel component should match snapshot - ExpansionPanelDetails children: ExpansionPanel with ExpansionPanelDetails 1`] = `
<div
  className="MuiPaper-root MuiExpansionPanel-root MuiExpansionPanel-rounded MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiExpansionPanelDetails-root"
  >
    content
  </div>
  <div
    className="MuiCollapse-container MuiCollapse-hidden"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner"
      >
        <div
          role="region"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpansionPanel component should match snapshot - ExpansionPanelSummary children: ExpansionPanel with ExpansionPanelSummary 1`] = `
<div
  className="MuiPaper-root MuiExpansionPanel-root MuiExpansionPanel-rounded MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    aria-disabled={false}
    aria-expanded={false}
    className="MuiButtonBase-root MuiExpansionPanelSummary-root"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiExpansionPanelSummary-content"
    >
      content
    </div>
  </div>
  <div
    className="MuiCollapse-container MuiCollapse-hidden"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner"
      >
        <div
          role="region"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ExpansionPanel component should match snapshot - Simple children: ExpansionPanel with simple children 1`] = `
<div
  className="MuiPaper-root MuiExpansionPanel-root MuiExpansionPanel-rounded MuiPaper-elevation1 MuiPaper-rounded"
>
  <div>
    content
  </div>
  <div
    className="MuiCollapse-container MuiCollapse-hidden"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner"
      >
        <div
          role="region"
        />
      </div>
    </div>
  </div>
</div>
`;
